improving parcel install

--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
 		"surge": "latest"
 	},
 	"scripts": {
+		"build:prod": "parcel build ./www/*.html --dist-dir ./dist --public-url './'",
+		"build:staging": "parcel build ./www/*.html --dist-dir ./dist --public-url './' --no-optimize",
+		"deploy:prod": "npm run build:prod && surge ./dist --domain turbo-eureka.surge.sh",
+		"deploy:staging": "npm run build:staging && surge ./dist --domain staging-turbo-eureka.surge.sh",
+		"dev": "parcel serve ./www/*.html --dist-dir ./dist --port 3000",
 		"kill": "npx kill-port 3000",
 		"start": "npm run dev",
-		"test": "npx cowsay no tests... yet!",
-		"dev": "parcel serve ./www/*.html --dist-dir ./dist --port 3000",
-		"build:staging": "parcel build ./www/*.html --dist-dir ./dist --public-url './' --no-optimize",
-		"build:prod": "parcel build ./www/*.html --dist-dir ./dist --public-url './'",
-		"deploy:staging": "npm run build:staging && surge ./dist --domain staging-turbo-eureka.surge.sh",
-		"deploy:prod": "npm run build:prod && surge ./dist --domain turbo-eureka.surge.sh"
+		"test": "npx cowsay no tests... yet!"
 	},
 	"type": "module"
 }
