--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@eslint/compat": "latest",
 		"@eslint/eslintrc": "latest",
 		"@eslint/js": "latest",
+		"express": "",
 		"eslint": "latest",
 		"globals": "latest",
 		"matter-js": "latest",
@@ -14,9 +15,8 @@
 		"build:staging": "parcel build ./www/*.html --dist-dir ./dist --public-url './' --no-optimize",
 		"deploy:prod": "npm run build:prod && surge ./dist --domain turbo-eureka.surge.sh",
 		"deploy:staging": "npm run build:staging && surge ./dist --domain staging-turbo-eureka.surge.sh",
-		"dev": "parcel serve ./www/*.html --port 3000",
 		"kill": "npx kill-port 3000",
-		"start": "npm run dev"
+		"serve:parcel": "parcel serve ./www/*.html --port 3000"
 	},
 	"type": "module"
 }
