--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"test:headed": "playwright test --headed",
 		"test:debug": "playwright test --debug",
 		"test:ui": "playwright test --ui",
-		"serve:test": "serve ./tests/fixtures"
+		"serve:test": "serve ./tests/fixtures",
+		"pretest": "npx playwright install"
 	},
 	"type": "module"
 }
